feat: wire protected Steel user takeover
